# TBMP

./: .gitignore
client/: TBMP.sln  project.godot
client/Scenes/: main.tscn
client/Scripts/: Main.cs.uid
server/: CMakeLists.txt  CMakePresets.json  README.md  build.ps1  build.sh  build_debug.ps1  build_ninja.bat  build_ninja_debug.bat  build_ninja_release.bat  build_release.ps1  gen_build_release.ps1  gen_build_release.sh  gen_ninja_build_debug.bat  gen_ninja_build_debug.ps1  gen_ninja_build_debug.sh  gen_ninja_build_release.bat  gen_ninja_build_release.ps1  gen_vs_msvc_prj.bat  gen_vs_prj.bat  gen_vs_prj.ps1  server.sln  setup_project.bat  setup_project.ps1  setup_project.sh
server/server/: ProgramEntry.cs
server/sources/: common.h  config.h  define.h  foo.c  foo.h  globals.h  kernels.h  kernels.ispc  macro.h  main.c  platform.h  server.h
